--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "assert": "^2.0.0",
     "body-parser": "^1.19.0",
     "chai": "^4.2.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "gulp": "^4.0.2",
     "gulp-eslint": "^6.0.0",
